<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spool Maker</string>
    <string name="tab_read">Read</string>
    <string name="tab_write">Write</string>
    <string name="section_scan">Last scan</string>
    <string name="scan_empty">No tag has been read yet.</string>
    <string name="section_write">Write spool</string>
    <string name="material_label">Material</string>
    <string name="total_weight_label">Spool weight (g)</string>
    <string name="total_weight_hint">e.g. 750</string>
    <string name="remaining_weight_label">Remaining amount (g)</string>
    <string name="remaining_weight_hint">e.g. 750</string>
    <string name="weight_help">When the material changes, the spool weight stored in the material file is used as the default. Both values can be changed before writing.</string>
    <string name="button_read">Read tag</string>
    <string name="button_write">Write tag</string>
    <string name="button_details">All stored values</string>
    <string name="button_import">Import material files</string>
    <string name="button_copy_details">Copy details</string>
    <string name="button_show_raw">Show raw data</string>
    <string name="button_hide_raw">Hide raw data</string>
    <string name="button_copy_raw">Copy raw data</string>
    <string name="menu_materials">Material settings</string>
    <string name="menu_language">Language</string>
    <string name="menu_info">Info</string>
    <string name="menu_license">License</string>
    <string name="page_materials">Material library</string>
    <string name="page_info">Info</string>
    <string name="page_license">License &amp; Open Source</string>
    <string name="version_footer">Version 1.2.4</string>
    <string name="version_format">Version %1$s</string>
    <string name="language_title">Language</string>
    <string name="language_system">System default</string>
    <string name="language_german">German</string>
    <string name="language_english">English</string>
    <string name="action_cancel">Cancel</string>
    <string name="license_app_version">Spool Maker Android %1$s</string>
    <string name="license_badge">GPL-3.0-or-later</string>
    <string name="license_intro">Free and open-source software. The notices on this page summarize the origin, modification status, and license.</string>
    <string name="license_origin_title">Origin &amp; Copyright</string>
    <string name="license_origin_body">Based on Spool-Maker by Dale A. Osborne.\nCopyright &#169; 2021 Dale Osborne.\nhttps://github.com/DA-Osborne/Spool-Maker</string>
    <string name="license_modification_title">Android Port &amp; Modifications</string>
    <string name="license_modification_body">This is a modified Android version of the upstream project. Modification state of this version: 25.08.2026. The Android port and later modifications are published under GPL-3.0-or-later; rights to the respective contributions remain with the respective contributors.</string>
    <string name="license_terms_title">License Notice</string>
    <string name="license_terms_body">Redistribution and modification are permitted under the terms of the GNU General Public License version 3 or any later version. To the extent permitted by law, the software is provided without warranty. The complete license text is available using the button below.</string>
    <string name="license_source_title">Source code</string>
    <string name="license_source_body">https://github.com/joker-mik/SpoolMakerAndroid</string>
    <string name="button_license_full">Show full GPL-3.0 license text</string>
    <string name="license_notice_footer">Not affiliated with or endorsed by UltiMaker or the upstream project.</string>
    <string name="info_body">Spool Maker Android %1$s\n\nThis app reads and writes UltiMaker-compatible NFC spool tags and manages material profiles and remaining amounts.\n\nBefore a tag can be written, the desired material must first be imported from a Cura material file. The app imports the material name, color, GUID and, if available, spool weight. The material is then available in the material library.\n\nProject / source code\nhttps://github.com/joker-mik/SpoolMakerAndroid\n\nNot an official UltiMaker product.</string>
    <string name="label_uid">UID</string>
    <string name="label_guid">Material GUID</string>
    <string name="label_material">Material</string>
    <string name="label_weight">Weight</string>
    <string name="label_timestamp">Time and usage</string>
    <string name="label_batch">Batch</string>
    <string name="label_station">Station</string>
    <string name="label_crc">Integrity</string>
    <string name="details_empty">No detail data yet. Read a tag first.</string>
    <string name="dialog_brand">Brand</string>
    <string name="dialog_material">Material</string>
    <string name="dialog_color">Color</string>
    <string name="dialog_guid">Material GUID</string>
    <string name="dialog_weight">Spool weight (g)</string>
    <string name="content_menu">Open menu</string>
    <string name="content_back">Back</string>
    <string name="content_add">Add material</string>
    <string name="content_edit">Edit material</string>
    <string name="content_delete">Delete material</string>
    <string name="content_import_database">Import material files into the database</string>
    <string name="materials_empty">The material database is empty.\nAdd a material using + or import material files using the import icon.</string>
    <string name="read_page_result">Result</string>
    <string name="result_manufacturer">Manufacturer</string>
    <string name="result_material">Material</string>
    <string name="result_color">Color</string>
    <string name="result_spool_weight">Spool weight</string>
    <string name="result_remaining_weight">Remaining weight</string>
    <string name="result_usage_duration">Usage duration</string>
    <string name="result_elapsed">Elapsed</string>
    <string name="result_date">Date</string>
    <string name="result_not_available">Not available</string>
    <string name="result_guid_not_in_database">Material GUID not in database</string>
    <string name="result_chip_uid">Chip UID</string>
    <string name="result_material_guid">Material GUID</string>
    <string name="read_page_details">All values</string>
    <string name="read_page_raw">Raw data</string>
    <string name="button_copy_page">Copy</string>
    <string name="raw_empty">No raw data yet. Read a tag first.</string>
    <string name="content_gallery_result">Show results page</string>
    <string name="content_gallery_details">Show all values</string>
    <string name="content_gallery_raw">Show raw data</string>
    <string name="copy_no_data">No data is available to copy yet.</string>
    <string name="copy_clipboard_unavailable">The clipboard is not available on this device.</string>
    <string name="copy_result_done">Result copied.</string>
    <string name="clipboard_result_label">Spool Maker result</string>
</resources>
