<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_brand" android:textColor="@color/text_primary" android:textStyle="bold" />
        <EditText android:id="@+id/editBrand" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="z. B. UltiMaker" android:inputType="textCapWords" android:maxLines="1" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_material" android:textColor="@color/text_primary" android:textStyle="bold" />
        <EditText android:id="@+id/editMaterial" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="z. B. Tough PLA" android:inputType="textCapWords" android:maxLines="1" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_color" android:textColor="@color/text_primary" android:textStyle="bold" />
        <EditText android:id="@+id/editColor" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="z. B. Black" android:inputType="textCapWords" android:maxLines="1" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_guid" android:textColor="@color/text_primary" android:textStyle="bold" />
        <EditText android:id="@+id/editGuid" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="monospace" android:hint="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" android:inputType="textNoSuggestions" android:maxLines="1" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_weight" android:textColor="@color/text_primary" android:textStyle="bold" />
        <EditText android:id="@+id/editSpoolWeightGrams" android:layout_width="match_parent" android:layout_height="wrap_content" android:digits="0123456789,." android:hint="z. B. 750" android:inputType="numberDecimal" android:maxLines="1" />
    </LinearLayout>
</ScrollView>
